# swirl-issue-25

./: .env  Cargo.toml  README.md  docker-compose.yaml
db/: Cargo.toml
db/migrations/2022-02-09-224619_create-background-jobs/: down.sql
db/src/: connection.rs
jobs/: Cargo.toml
jobs/src/: images.rs  lib.rs
migrations/2022-02-09-224619_create-background-jobs/: up.sql
src/: lib.rs
