[package]
name = "jobs"
version = "0.1.0"
edition = "2021"

[dependencies]
swirl = { git = "https://github.com/sgrif/swirl.git", branch = "master", features = ["r2d2"]}
serde = "1.0"
serde_json = "1.0"
log = "0.4.14"
simple_logger = "2.1.0"
uuid = { version = "0.8", features=["v4"]}

db = { path = "../db"}
